mbsimschemadir = @MBXMLUTILSSCHEMADIR@/http___www_mbsim-env_de_MBSim
dist_mbsimschema_DATA = mbsim.xsd

mbsimintschemadir = @MBXMLUTILSSCHEMADIR@/http___www_mbsim-env_de_MBSimIntegrator
dist_mbsimintschema_DATA = mbsimintegrator.xsd

mbsimanalyserschemadir = @MBXMLUTILSSCHEMADIR@/http___www_mbsim-env_de_MBSimAnalyser
dist_mbsimanalyserschema_DATA = mbsimanalyser.xsd
