mbsimschemadir = @MBXMLUTILSSCHEMADIR@/http___www_mbsim-env_de_MBSim
dist_mbsimschema_DATA = mbsim.xsd

mbsimintschemadir = @MBXMLUTILSSCHEMADIR@/http___www_mbsim-env_de_MBSimIntegrator
dist_mbsimintschema_DATA = mbsimintegrator.xsd

mbsimanalyzerschemadir = @MBXMLUTILSSCHEMADIR@/http___www_mbsim-env_de_MBSimAnalyzer
dist_mbsimanalyzerschema_DATA = mbsimanalyzer.xsd
